cmake_minimum_required(VERSION 3.5 FATAL_ERROR)
project(Primer
  LANGUAGES CXX)

message(STATUS "is the C++ compiler loaded? ${CMAKE_CXX_COMPILER_LOADED}")

set(CMAKE_CXX_STANDARD 14)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/bin)
include_directories(${CMAKE_SOURCE_DIR}/include)

ADD_SUBDIRECTORY(${CMAKE_SOURCE_DIR}/src/ch01)
ADD_SUBDIRECTORY(${CMAKE_SOURCE_DIR}/src/ch02)
ADD_SUBDIRECTORY(${CMAKE_SOURCE_DIR}/src/ch03)
ADD_SUBDIRECTORY(${CMAKE_SOURCE_DIR}/src/ch04)
ADD_SUBDIRECTORY(${CMAKE_SOURCE_DIR}/src/ch05)
ADD_SUBDIRECTORY(${CMAKE_SOURCE_DIR}/src/ch06)
ADD_SUBDIRECTORY(${CMAKE_SOURCE_DIR}/src/ch07)
ADD_SUBDIRECTORY(${CMAKE_SOURCE_DIR}/src/ch08)
ADD_SUBDIRECTORY(${CMAKE_SOURCE_DIR}/src/ch09)
ADD_SUBDIRECTORY(${CMAKE_SOURCE_DIR}/src/ch10)
ADD_SUBDIRECTORY(${CMAKE_SOURCE_DIR}/src/ch11)
ADD_SUBDIRECTORY(${CMAKE_SOURCE_DIR}/src/ch12)
ADD_SUBDIRECTORY(${CMAKE_SOURCE_DIR}/src/ch13)
ADD_SUBDIRECTORY(${CMAKE_SOURCE_DIR}/src/ch14)
ADD_SUBDIRECTORY(${CMAKE_SOURCE_DIR}/src/ch15)
ADD_SUBDIRECTORY(${CMAKE_SOURCE_DIR}/src/ch16)
ADD_SUBDIRECTORY(${CMAKE_SOURCE_DIR}/src/ch17)
ADD_SUBDIRECTORY(${CMAKE_SOURCE_DIR}/src/ch18)
ADD_SUBDIRECTORY(${CMAKE_SOURCE_DIR}/src/ch19)




			  
